补充--add-exports